--- a/Bio.html
+++ b/Bio.html
@@ -14,26 +14,25 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid pt-2" >
             <div class="row">
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center mynavbar">
-                    <h2>Book store</h2>
+                <div class="col-md-12 col-lg-4 col-sm-12 text-center mynavbar">
+                    <h1>Book store</h1>
                 </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
+                <div class="col-md-10 col-lg-6 col-sm-10 my-2">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Book.html">Books</a></li>
                         <li><a href="Bio.html">Bio</a></li>
                         <li><a href="Contact.html">Contact</a></li>
+                        <div>
+                            <i class="fa-solid fa-user fs-4 me-3 "></i>
+                            <a href=""><i class="fa-solid fa-bag-shopping fs-4 text-dark"></i></a>
+                        </div>
                     </ul>
                 </div>
-                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
-                    <div class="d-inline ms-5 ">
-                        <i class="fa-solid fa-user fs-4 m-2"></i>
-                        <li><a href=""><i class="fa-solid fa-bag-shopping fs-4"></i></a></li>
-                    </div>
-                </div>
             </div>
+        </div>
         </div>
     </header>
     <section>
@@ -55,13 +54,16 @@
                         numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
                     </p>
                     <div class="mt-5">
-                        <i class="fa-brands fa-facebook border p-2 me-1 text-white fs-5 rounded-circle" style="background-color: rgb(148,102,89) ;"></i>
-                        <i class="fa-brands fa-twitter border p-2 mx-1 text-white fs-5 rounded-circle" style="background-color: rgb(148,102,89) ;"></i>
-                        <i class="fa-brands fa-instagram border p-2 mx-1 text-white fs-5 rounded-circle" style="background-color: rgb(148,102,89) ;"></i>        
+                        <i class="fa-brands fa-facebook border p-2 me-1 text-white fs-5 rounded-circle"
+                            style="background-color: rgb(148,102,89) ;"></i>
+                        <i class="fa-brands fa-twitter border p-2 mx-1 text-white fs-5 rounded-circle"
+                            style="background-color: rgb(148,102,89) ;"></i>
+                        <i class="fa-brands fa-instagram border p-2 mx-1 text-white fs-5 rounded-circle"
+                            style="background-color: rgb(148,102,89) ;"></i>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 my-4">
-                    <img class="img-fluid" src="about-image-02.png" alt="">
+                    <img class="img-fluid" src="img/about-image-02.png" alt="">
                 </div>
             </div>
         </div>
@@ -69,7 +71,7 @@
             <div class="container my-5">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 my-4">
-                        <img class="img-fluid" src="about-image.png" alt="">
+                        <img class="img-fluid" src="img/about-image.png" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 m-auto px-2 ">
                         <h1 class="font myheading">Personal Life</h1>
@@ -91,17 +93,17 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <img class="img-fluid" src="award01.png" alt="">
+                        <img class="img-fluid" src="img/award01.png" alt="">
                         <h4 class="font ">Best Author Award 2016</h4>
                         <p>Nemo enim ipsam voluptatem quia voluptas aspernatur aut odit aut fugit</p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <img class="img-fluid" src="award02.png" alt="">
+                        <img class="img-fluid" src="img/award02.png" alt="">
                         <h4 class="font">World's #1 Best-selling Book 2014</h4>
                         <p>Nemo enim ipsam voluptatem quia voluptas aspernatur aut odit aut fugit</p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <img class="img-fluid" src="award03.png" alt="">
+                        <img class="img-fluid" src="img/award03.png" alt="">
                         <h4 class="font">NYT Best-selling Author 2013</h4>
                         <p>Nemo enim ipsam voluptatem quia voluptas aspernatur aut odit aut fugit</p>
                     </div>
@@ -124,10 +126,17 @@
                 Visit Instagram
             </button>
         </div>
+        <div class="ebookcontainer">
+            <img src="img/ebook01.jpeg" alt="">
+            <img src="img/ebook02.jpeg" alt="">
+            <img src="img/ebook03.jpg" alt="">
+            <img src="img/ebook04.jpeg" alt="">
+            <img src="img/ebook05.jpg" alt="">
+        </div>
         <div class="container my-5">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <img class="img-fluid" src="about-image-03.png" alt="">
+                    <img class="img-fluid" src="img/about-image-03.png" alt="">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 m-auto">
                     <h1 class="font">Need a Speaker for Your Upcoming Event?</h1>
@@ -156,8 +165,8 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 position-relative">
-                        <img class="img05" src="book-cover3.png" alt="">
-                        <img class="img06" src="book-cover4.png" alt="">
+                        <img class="img05" src="img/book-cover3.png" alt="">
+                        <img class="img06" src="img/book-cover4.png" alt="">
                     </div>
                 </div>
             </div>
